buildscript {
	repositories {
		mavenLocal()
		jcenter()
		mavenCentral()
	}
	dependencies {
		classpath group: 'org.mini2Dx', name: 'butler', version: '1.1.3'
	}
}

subprojects {

	apply plugin: 'java-library'

	version "1.4.0"

	sourceCompatibility = 14
	targetCompatibility = 14

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	java {
		modularity.inferModulePath = true
	}

	afterEvaluate {
		repositories {
			jcenter()
			maven {
				maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = findProperty("github.username")
					password = findProperty("github.token")
				}
			}
		}
	}
}
